--- a/src/views/Header/style.module.css
+++ b/src/views/Header/style.module.css
@@ -4,9 +4,11 @@ header {
     display: flex;
     justify-content: space-between;
     border-bottom: groove round;
-    background-color: rgb(137, 107, 151)
+    background-color: #0091AD
 }
 
 button {
     margin: 20px 40px 20px 20px;
+    border-radius: 10px;
+    padding: 10px;
 }
