--- a/src/components/Buttons/style.module.css
+++ b/src/components/Buttons/style.module.css
@@ -1,3 +1,6 @@
-button {
+.buttonStyle {
     background-color: #B7094C;
+    margin: 20px 40px 20px 20px;
+    border-radius: 10px;
+    padding: 10px;
 }
