--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,38 @@
-
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 #root {
-  min-height: 100vh;
+    min-height: 100vh;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #892B64;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #170623;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+
+.card {
+    margin: 5px;
+    background-color: #210934;
+    border-color: #441269;
+    border: round;
+    box-shadow: 0px 0px 12px 8px #331653;
+}
+
+.card:hover {
+    border: solid 4px;
+    border-color: #441269;
+    box-shadow: 0px 0px 10px 8px white;
 }
 
 .card-img-top {
@@ -28,6 +41,27 @@ code {
     object-fit: cover;
 }
 
-.card {
-  margin:10px;
+
+.card-body {
+  background-color: #210934;
 }
+
+.card-text {
+  color: beige;
+}
+
+.navbar {
+    background-color: #331653;
+    
+}
+
+.form-control {
+    background-color: #210934;
+    color: beige;
+}
+.form-control:focus {
+    background-color: #f3f0f6;
+    color: #210934;
+    font-weight: bolder;
+}
+
