--- a/src/index.css
+++ b/src/index.css
@@ -147,15 +147,33 @@ code {
     margin-top: 10px;
     font-weight: 400;
     font-size: 1.5em;
+    border-radius: 10px;
     width: 100%;
 }
 
 
 .btn-auth:hover {
     background-color: #E7DFDD;
-    border-radius: 10px;
     font-weight: 400;
-    width: 100%;
 }
 
+.btn-footer {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    width: 100%;
+    border-radius: 10px;
+    padding: 2px;
+    margin-top: 2em;
+}
+
+.btn-footer:hover {
+   background: linear-gradient(to left, #140f20 0%, #190d4b 100%);
+}
+
+.BsChevronDoubleDown {
+    font-size: 3em;
+    font-weight: 600;
+    color: #E7DFDD;
+}
 
