--- a/src/views/Content/Movie/style.module.css
+++ b/src/views/Content/Movie/style.module.css
@@ -1,4 +1,4 @@
-.movieContent {
+/* .movieContent {
     align-self: center;
     background-color: #1780A1;
     width: 100%;
@@ -29,11 +29,6 @@
     padding: 10px;
 }
 
-/* .linkmovie {
-    align-self: center;
-    width: 51%;
-    text-decoration: none;
-} */
 
 .mvUnique {
     padding: 5px;
@@ -72,4 +67,4 @@
 }
 
 
-
+ */
