--- a/src/index.css
+++ b/src/index.css
@@ -253,5 +253,33 @@ code {
     color: #e7dfdd;
 }
 
+.svg-icon {
+  width: 3em;
+  height: 3em;
+  position: relative;
+  right: 20em;
+}
+
+.svg-icon path,
+.svg-icon polygon,
+.svg-icon rect {
+  fill: #dec7f1;
+}
+
+.svg-icon circle {
+  stroke: #dec7f1;
+  stroke-width: 1;
+}
+
+.svg-icon path:hover,
+.svg-icon polygon:hover,
+.svg-icon rect:hover {
+  fill: #4CC9F0;  
+}
+
+.goBackBtn{
+  padding-top: 1em;
+  padding-left: 1em;
+}
 
  
